# CI-example

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
ci_example/: functions.py
tests/: test_fac.py
