[tool.poetry]
name = "ci-example"
version = "0.1.0"
description = "Very simple project to illustrate using poetry for project management and CI for testing and packaging"
authors = ["Geert Jan Bex <geertjan.bex@uhasselt.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.8.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
